--- a/index.html
+++ b/index.html
@@ -65,10 +65,20 @@
 		</div>
 		<img class="gradient" src="images/gradient.png" alt="" />
 		<div id="maximage">
-			<img src="images/3.jpg" alt="" width="1200" height="1050" />
-			<img src="images/4.jpg" alt="" width="2048" height="1536" />
-			<img src="images/5.jpg" alt="" width="2048" height="1536" />
-			<img src="images/6.jpg" alt="" width="2048" height="1536" />
+			<img src="images/slides/1.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/2.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/3.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/4.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/5.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/6.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/7.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/8.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/9.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/10.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/11.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/12.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/13.jpg" alt="" width="1200" height="1050" />
+			<img src="images/slides/14.jpg" alt="" width="1200" height="1050" />
 		</div>
 		
 		<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js'></script>
